# experiment-sans-io-chat

./: .gitignore  README.md  pyproject.toml
chat/: connection.py  message.py
chat/middleware/: __init__.py  ping.py
chat/protocol/: _abc.py  errors.py  json.py  yolo.py
chat/server/: chats.py
examples/: trio_client.py  trio_server.py
