[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["Niek Keijzer <niek@burrow.cloud>"]

[tool.poetry.dependencies]
python = "^3.10"
trio = "^0.20.0"
trio-websocket = "^0.9.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
(
 /(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
 )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
